# AutonomousRobotFollowerWithObstacleAvoidance

check_odom/: CMakeLists.txt  package.xml
check_odom/src/: check_odom.py
d_star_lite/src/: d_star_lite.h
dep2ls/: CMakeLists.txt  package.xml
dep2ls/launch/: dep2ls.launch  zeddep2ls.launch
distance/: CMakeLists.txt  package.xml
distance/scripts/: depthimage_to_distance.py
pcl2scan/: CMakeLists.txt  package.xml
pcl2scan/launch/: pcl2scan.launch
rotate_robot/: package.xml
rotate_robot/scripts/: main.py  rotate.py  script3.py  simplescript.m  simplescript2.m  test.txt  test3.m  testscript.py  testscript2gazebo.py  untitled.fig  untitled2.fig
rtab/: CMakeLists.txt  package.xml
rtab/launch/: trail3.launch  trail4.launch  trail6.launch  z2.launch  zrtab.launch
