<?xml version="1.0"?>
<package format="2">
  <name>check_odom</name>
  <version>0.0.0</version>
  <description>The check_odom package</description>

  <maintainer email="bala@todo.todo">bala</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <export> </export>
</package>
